--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -214,19 +214,16 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        run: terraform apply -auto-approve
+        run: |
+          terraform apply -auto-approve
+          echo "::set-output name=api_url::$(terraform output -raw api_url)"
 
-      - name: URL Injection
+      - name: API URL Injection
         id: inject
-        uses: actions/github-script@v7
-        with:
-          script: |
-            file = "./front-end/javascript/visitor-counter.js"
-            variable = "apiUrl"
-            new_value= "newValue"
+        run: |
+          new_api_url="${{ steps.apply.outputs.api_url }}"
+          sed -i "s#var apiUrl = .*#var apiUrl = \"$new_api_url\"#" ./front-end/javascript/visitor-counter.js
 
-            sed -i "s/\($variable[[:space:]]*=[[:space:]]*\)[^;]*/\1\"$new_value\";/" "$file"
-          
   sync_s3:
     name: Sync S3
     needs: 
