--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -225,7 +225,7 @@ jobs:
       - name: Inject API
         id: inject
         run: |
-          api-injector.sh
+          bash api-injector.sh
 
   sync_s3:
     name: Sync S3
