--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -180,6 +180,9 @@ jobs:
       - mock_lambda_test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.changes.outputs.back-end == 'true'
     
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
+
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -217,15 +220,24 @@ jobs:
         run: |
           terraform apply --auto-approve
           
-      - name: Change Dir
-        id: dir
+      - name: URL Capture
+        id: capture
         run: |
-          cd ../scripts
+          terraform output -raw api_url
 
-      - name: Inject API
+      - name: URL Injection
         id: inject
         run: |
-          bash api-injector.sh
+          chmod +x ../scripts/api-injection.sh
+          ../scripts/api-injection.sh "${{ steps.capture.outputs.stdout }}"
+
+      - name: Push Injection
+        run: |
+          git config --global user.email "billymm314@gmail.com"
+          git config --global user.name "Billy Euceda"
+          git add ../../front-end/javascript/visitor-counter.js
+          git commit -m "Auto Push: URL Injection"
+          git push
 
   sync_s3:
     name: Sync S3
